--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 ul {
   justify-content: center;
   align-items: center;
@@ -30,4 +35,20 @@ li:hover {
 ::selection {
   background-color: black;
   color: white;
+}
+#btn{
+    color: white;
+    background-color: red;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    border: 3px solid black;
+}
+.button{
+    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.2);
+    transform: scale(1);
+}
+.button:hover{
+    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.2);
+    transform: scale(.9);
 }
